# chipstorch-yolov3

./: .gitignore  CMakeLists.txt  README.md  chipsYoloRunner.cpp  cifar10.cpp  download_cifar10.py  main.cpp  view_cifar10.py
include/chipsYolo/: ConfigLoader.hpp  DetectionLayer.hpp  Drawer.hpp  IOHandler.hpp  IdentityLayer.hpp  MaxPool2D.hpp  Model.hpp  Splitter.hpp  Trimmer.hpp  UpsampleLayer.hpp  Yolo.hpp
